--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "colorable": "^1.0.5",
     "jotai": "^2.10.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
