--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "colorable": "^1.0.5",
+    "file-saver": "^2.0.5",
     "jotai": "^2.10.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
